# aggregation_ws

./: .gitignore  Makefile  README.md  flows.db  main.py  requirements.txt  setup.cfg  test.db
app/: settings.py
app/models/: flows_definitions.py
app/persistent_backend/: database.py  query_statements.py
app/routers/: retrieve_flows.py  store_flow_metrics.py
config/: logfile.ini
scripts/: get_request.sh  post_request.sh  purge_all.sh  purge_db.sh  shutdown.sh  start_server.sh  stop_server.sh  test.sh  test_data1.json
tests/: test.db  test_application.py
tests/routers/: test_retrieve_flows.py
