[metadata]
name = flow_aggregation_service
version = 0.0.1
author = Uthira Mohan
author_email = uthira2@gmail.com
description = A simple FastAPI application that accepts metrics about flows and reports on it
url = https://github.com/pypa/sampleproject

[options]
python_requires = >=3.6
install_requires =
    fastapi
    uvicorn
    databases
    fastapi_pagination
    fastapi_versioning
    aiosqlite

[options.extras_require]
test=
    pytest
    pytest-cov