[metadata]
name = flow_aggregation_service
version = 0.0.1
author = Uthira Mohan
author_email = uthira2@gmail.com
description = A simple FastAPI application that accepts events about flows and reports.
url = https://github.com/uthiramohan/aggregation_ws

[options]
python_requires = >=3.6
py_modules =
    app
packages = find:
install_requires =
    fastapi
    uvicorn
    databases
    fastapi_pagination
    fastapi_versioning
    aiosqlite

[options.extras_require]
test=
    pytest
    pytest-cov

